finalize2 readMe ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "bddfbfc8",
    "metadata": {},
    "outputs": [],
@@ -70,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "060c6ee3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "route = '../data/TMNIST_data.csv'\n",
+    "route = 'data/TMNIST_data.csv'\n",
     "#route = 'insert your route here' \n",
     "testAmount = 1000\n",
     "scale = 255\n",
