--- a/main.ipynb
+++ b/main.ipynb
@@ -56,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "bddfbfc8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nHnN_MLP as nMLP\n",
-    "import functions as fun\n",
+    "import src.nHnN_MLP as nMLP\n",
+    "import src.functions as fun\n",
     "import time\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
@@ -1465,7 +1465,7 @@
     "- **Step Decay:** Reasonably effective, but abrupt drops caused plateauing.  \n",
     "- **Exponential:** Consistently underperformed, decaying too quickly.  \n",
     "\n",
-    "📌 **Takeaway:** Cosine schedules are most practical, striking the right balance between efficiency and accuracy. Fixed rates are strong but inefficient.  \n",
+    "**Takeaway:** Cosine schedules are most practical, striking the right balance between efficiency and accuracy. Fixed rates are strong but inefficient.  \n",
     "\n",
     "---\n",
     "\n",
